etl-api/src/db/snapshots/etl_api__db__sources__tests__source_config_json_deserialization.snap
---
source: etl-api/src/db/sources.rs
expression: deserialized.unwrap()
---
SourceConfig {
    host: "localhost",
    port: 5432,
    name: "postgres",
    username: "postgres",
    password: Some(
        Secret([REDACTED alloc::string::String]),
    ),
}
