etl-api/src/db/snapshots/etl_api__db__sources__tests__source_config_json_encryption.snap
---
source: etl-api/src/db/sources.rs
expression: config_in_db
---
{
  "host": "localhost",
  "name": "postgres",
  "password": "[password]",
  "port": 5432,
  "username": "postgres"
}
